--- a/src/common/Table/Table.module.css
+++ b/src/common/Table/Table.module.css
@@ -4,7 +4,9 @@
   box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.25);
   overflow-x: hidden;
 }
-
+.tableResponsiveContainer {
+    overflow-x: auto;
+}
 .table {
     width: 100%;
     border-collapse: collapse;
