--- a/src/layout/main/TitleBlock.module.css
+++ b/src/layout/main/TitleBlock.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 3%;
   height: 93px;
   background: #ffffff;
@@ -11,14 +12,35 @@
 }
 
 .crumbs {
-    display: flex;
+  display: flex;
 }
 
 .subrouteCrumbs {
-    display: flex;
-    margin-left: 14px;
+  display: flex;
+  margin-left: 14px;
 }
 
 .greaterThanIcon {
-    margin-right: 14px;
+  margin-right: 14px;
+}
+
+.burger {
+  display: none;
+  background: transparent;
+  cursor: pointer;
+  border: 0;
+}
+
+.burgerLine {
+  display: block;
+  margin-bottom: 5px;
+  width: 30px;
+  height: 5px;
+  background-color: #5d5dfd;
+}
+
+@media screen and (max-width: 991px) {
+  .burger {
+    display: block;
+  }
 }
