--- a/src/modules/Home/Home.module.css
+++ b/src/modules/Home/Home.module.css
@@ -2,3 +2,10 @@
   margin-top: 60px;
   margin-bottom: 60px;
 }
+
+@media screen and (max-width: 1024px) {
+  .homepage {
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+}
