--- a/src/layout/sidebar/Navbar.module.css
+++ b/src/layout/sidebar/Navbar.module.css
@@ -1,11 +1,13 @@
 .navbar {
-    height: 62px;
-    width: 100%;
-    background: #B9B9FF;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    padding: 0 25%;
-    font-size: 18px;
-    cursor: pointer;
+  height: 62px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 25%;
+  font-size: 18px;
+  cursor: pointer;
+}
+.active {
+  color: #fff;
+  background: #b9b9ff;
 }
