--- a/src/common/Table/Table.module.css
+++ b/src/common/Table/Table.module.css
@@ -5,11 +5,11 @@
   overflow-x: hidden;
 }
 .tableResponsiveContainer {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 .table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .tableTitle {
@@ -36,7 +36,7 @@
   cursor: pointer;
 }
 .bodyRow:hover {
-  background: #f5f5f5;
+  background: #e5e4e4;
 }
 .bodyRowEven {
   background: #f5f5f5;
