--- a/src/layout/main/TitleBlock.module.css
+++ b/src/layout/main/TitleBlock.module.css
@@ -8,7 +8,7 @@
   background: #ffffff;
   box-shadow: 0px -7px 24px rgba(0, 0, 0, 0.25);
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.4rem;
 }
 
 .crumbs {
@@ -43,5 +43,23 @@
 @media screen and (max-width: 991px) {
   .burger {
     display: block;
+  }
+  /* .crumbs {
+    flex-direction: row;
+  } */
+}
+
+@media (max-width: 767px) {
+  .titleBlockContainer {
+    height: 60px;
+  }
+  .crumbs {
+    display: none;
+  }
+  .subrouteCrumbs {
+    display: none;
+  }
+  .greaterThanIcon {
+    display: none;
   }
 }
