--- a/src/layout/sidebar/Navbar.module.css
+++ b/src/layout/sidebar/Navbar.module.css
@@ -5,9 +5,11 @@
   align-items: center;
   padding: 0 25%;
   font-size: 18px;
-  cursor: pointer;
 }
 .active {
   color: #fff;
   background: #b9b9ff;
+}
+.pointer {
+  cursor: pointer;
 }
