--- a/src/layout/sidebar/Sidebar.module.css
+++ b/src/layout/sidebar/Sidebar.module.css
@@ -31,6 +31,7 @@
 @media (min-width: 768px) and (max-width: 991px) {
     .sidebarContainer {
         width: 50%;
+        height: 100vh;
     }
 
 }
